--- a/C3_W2_Lab_2_Algorithmic_Dimensionality.ipynb
+++ b/C3_W2_Lab_2_Algorithmic_Dimensionality.ipynb
@@ -181,6 +181,19 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XaRRK9FIMgjS"
+      },
+      "source": [
+        "import seaborn as sns\n",
+        "print(features.shape)\n",
+        "sns.heatmap(features.corr(), cmap='Blues', annot=True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "HTnErJpNYiv6"
